# NamedPipe

./: .gitignore  CMakeLists.txt  README.md  simple_client.cpp  simple_server.cpp
cmake/: googletestconfig.txt.in
tests/: All_Tests.cpp  All_Tests.hpp  createfile_test.hpp  simple_test.hpp
